add footer and footer style

--- a/index.html
+++ b/index.html
@@ -157,7 +157,9 @@
                     <i class="fab fa-youtube"></i>
                   </a>   
             </div>
-
         </main>
+        <footer>
+            <p class="addinfo">Created by Josepha Scharnetzki</p>
+        </footer>
     </body> 
 </html>
